# monorepo-py

./: .env-template  .gitignore  README.md  pyproject.toml  test_custom_packages.py
apps/: __init__.py
apps/chatbot/: main.py
apps/code_and_test_generator/: main.py
apps/llm_chatbot/: main.py
apps/llm_rag_facts/: __init__.py  db.py  llm_utils.py  main.py
apps/speach_to_text/: main.py
libs/aiohttp/tests/: aiohttp_test.py
libs/algorithms/: app.py  code.py  numerical_systems_test.py  search_binary_test.py  sort_bubble.py  sort_quick.py  sort_selection.py  substring_test.py
libs/algorithms/test/: combinatorics_test.py  search_binary_test.py  search_linear_test.py  sort_bubble_test.py  sort_quick_test.py
libs/algorithms/util/: timed.py
libs/dspy/: assertions_test.py  data_test.py  evaluate_test.py  llm_test.py  lm_test.py  metrics_test.py  model.py  module_test.py  optimizers_test.py  rag_test.py  retrieve_test.py  signature_test.py  template_test.py  working_example_test.py
libs/dspy/data/: compiled_simple_program.json  custom_data_set.csv
libs/dspy/utils/: constants.py  simple_program.py
libs/langchain/: README.md  agents_test.py  chain_test.py  chat_gpt_functions_test.py  chat_model_test.py  chat_prompt_template_test.py  debug_test.py  document_loader_test.py  document_loader_test.py_test.py  document_test.py  embeddings_test.py  few_shot_chat_message_prompt_template_test.py  few_shot_prompt_template_test.py  indexing.py_test.py  lcel_test.py  llm_chain_test.py  llm_test.py  memory_test.py  message_prompt_template_test.py  model.py  model_test.py  output_parser_test.py  prompt_template_test.py  rag_test.py  rag_test.py_test.py  retrieval_test.py_test.py  retriever_test.py  runnable_lambda_test.py  runnable_parallel_test.py  runnable_pass_through_test.py  runnable_passt_hrough_test.py  runnable_test.py  selector_test.py  template_test.py  template_test.py_test.py  text_embedding_test.py_test.py  text_splitter_test.py  tools_test.py  vector_store_test.py  vector_store_test.py_test.py  (+1 more)
libs/langchain/data/: some_html.html  some_text.txt
libs/milvus/: milvus_test.py
libs/openai/: model.py  openai_test.py  pychatgpt_test.py
libs/pandas/: pandas_test.py
libs/py_core/: _test.py  boolean_test.py  built_in_test.py  built_in_vars_test.py  class_test.py  dict_test.py  exceptions_test.py  filter_test.py  frozen_set_test.py  functions_test.py  list_test.py  manager_context_test.py  map_test.py  match_test.py  module_argparse_test.py  module_beautifulsoup4_test.py  module_calendar_test.py  module_configparser_test.py  module_cprofile_test.py  module_csv_test.py  module_custom_in_file.py  module_docker_test.py  module_json_test.py  module_math_test.py  module_os_test.py  module_paramiko_test.py  module_pathlib_test.py  module_platform_test.py  module_re_test.py  module_requests_test.py  module_secrets_test.py  modules_test.py  number_test.py  operators_test.py  package_test.py  persistence_test.py  special_variable_test.py  string_test.py  tupels_test.py  while_test.py  (+1 more)
libs/py_core/custom_package/: bar_module.py  foo_module.py
libs/py_core/custom_package_2/: module_1.py
libs/py_core/data/: data.csv  data.json  data.yaml  text.txt
libs/py_core/tests/: closure_test.py  decorator_test.py  dynamic_typing_test.py  enumerate_test.py  file_test.py  generator_test.py  if_test.py  iter_test.py  module_accessify_test.py  module_asyncio_test.py  module_builtins_test.py  module_concurrent_test.py  module_datetime_test.py  module_itertools_test.py  module_os_test.py  module_paramiko_test.py  none_test.py  (+18 more)
libs/сhroma/: chromadb_test.py  client_api_test.py  http_client_test.py  persistent_client_test.py
projects/: __init__.py
projects/cli-click/: cli.py
projects/llm_chatbot/: main.py
projects/llm_code_and_test_generator/: README.md
projects/llm_rag_facts/: main.py
projects/llm_rag_facts_dspy/: __init__.py  build_data_store.py  config.py  embeddings.py  evaluate.py  evaluator.py  inference.py  main.py  optimize.py  optimizer.py
projects/llm_rag_facts_langchain/: db.py
projects/llm_rag_facts_store_chromadb_langchain/: app_container.py  chroma_client.py  cli.py  container.py  core.py  embeddings.py  lm_container.py  services_container.py
projects/llm_rag_facts_store_langchain/: app_container.py  cli.py  core.py
projects/llm_speach_to_text/: README.md  main.py
projects/web_flask/: config.py
(+31 files in other folders)
