[tool.poetry]
name = "monorepo-py"
version = "0.1.0"
description = "A Python monorepo using Poetry"
authors = ["Viktar Duzh <Viktar.Duzh@gmail.com>"]

packages = [
    { include = "projects/*" },
    { include = "libs/*" },
]

[tool.poetry.scripts]
llm_speach-to-text = "projects.llm_speach_to_text:main"
llm_code_and_test_generator = "projects.llm_code_and_test_generator:main"
llm_chatbot = "projects.llm_chatbot:main"
llm_rag_facts = "projects.llm_rag_facts:main"
llm_rag_facts_db = "projects.llm_rag_facts:db"

[tool.poetry.dependencies]
#python = "^3.11"
python = ">=3.11,<3.12"

# Shared libraries

# Application-specific dependencies
openai = "^1.12.0"
pychatgpt = "^0.4.3.3"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
unstructured = "^0.12.4"
pypdf = "^4.0.1"
rapidocr-onnxruntime = "^1.3.11"
faiss-cpu = "^1.7.4"
docarray = "^0.40.0"
langchainhub = "^0.1.14"
duckduckgo-search = "^4.4.3"
langchain = "^0.1.8"
langchain-community = "^0.0.21"
langchain-experimental = "^0.0.52"
google-api-python-client = ">=2.100.0"
wikipedia = "^1.4.0"
numexpr = "^2.9.0"
pdf2image = "^1.17.0"
pdfminer = "^20191125"
pdfminer-six = "^20231228"
pillow-heif = "^0.15.0"
faker = "^24.1.0"
pyboxen = "^1.3.0"
dspy-ai = "^2.4.5"
