[tool.poetry]
name = "monorepo-py"
version = "0.1.0"
description = "A Python monorepo using Poetry"
authors = ["Viktar Duzh <Viktar.Duzh@gmail.com>"]

packages = [
    { include = "projects/*" },
    { include = "libs/*" },
]

[tool.poetry.scripts]
cli-click="projects.cli-click.cli:cli"
web_flask = "projects.web_flask:main"
llm_speach-to-text = "projects.llm_speach_to_text:main"
llm_code_and_test_generator = "projects.llm_code_and_test_generator:main"
llm_chatbot = "projects.llm_chatbot:main"
llm_rag_facts = "projects.llm_rag_facts:main"
llm_rag_facts_db = "projects.llm_rag_facts:db"
llm_rag_facts_store_langchain = "projects.llm_rag_facts_store_langchain.cli:cli"
llm_rag_facts_dspy_optimize = "projects.llm_rag_facts_dspy:optimize"
llm_rag_facts_dspy_evaluate = "projects.llm_rag_facts_dspy:evaluate"
llm_rag_facts_dspy_inference = "projects.llm_rag_facts_dspy:inference"


[tool.poetry.dependencies]
#python = "^3.11"
python = ">=3.11,<3.12"

# Shared libraries

# Application-specific dependencies
openai = "^1.12.0"
pychatgpt = "^0.4.3.3"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.8"
chromadb = "^0.5.0"
unstructured = "^0.14.4"
pypdf = "^4.0.1"
rapidocr-onnxruntime = "^1.3.11"
faiss-cpu = "^1.7.4"
docarray = "^0.40.0"
langchainhub = "^0.1.14"
duckduckgo-search = "^6.1.5"
langchain = "^0.2.2"
langchain-community = "^0.2.2"
langchain-experimental = "^0.0.60"
google-api-python-client = ">=2.100.0"
wikipedia = "^1.4.0"
numexpr = "^2.9.0"
pdf2image = "^1.17.0"
pdfminer = "^20191125"
pillow-heif = "^0.16.0"
faker = "^25.5.0"
pyboxen = "^1.3.0"
dspy-ai = "^2.4.5"
cowsay = "^6.1"
emoji = "^2.11.1"
accessify = "^0.3.1"
flask = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
requests = "^2.31.0"
paramiko = "^3.4.0"
docker = "^7.0.0"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
#pymilvus = "2.3.5"
pymilvus = {extras = ["model"], version = "2.3.5"}
click = "^8.1.7"
dependency-injector = "^4.41.0"
pdfminer-six = "^20231228"
